[package]
name = "localai-model-manager"
version = "0.0.0"
description = "The Model Manager for LocalAI"
authors = ["Plasmo <support@plasmo.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "release/version-updates", features = [] }

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "release/version-updates", features = ["shell-open"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kv = "0.24.0"


# [target."cfg(target_os = \"macos\")".dependencies]
# cocoa = "0.24.1"
# objc = "0.2.7"

# [target."cfg(target_os = \"linux\")".dependencies]
# webkit2gtk = "0.18.2"

[target."cfg(target_os = \"windows\")".dependencies]
webview2-com = "0.19.1"
windows = "0.39.0"
winreg = "0.11.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
