[package]
name = "local-ai-desktop"
version = "0.0.0"
description = "The Model Manager for local.ai"
authors = ["❤️☮✋"]
license = "GNU GPLv3"
repository = "https://github.com/louisgv/local.ai"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
llm = { git = "https://github.com/rustformers/llm", branch = "main", package = "llm" }

# llm = { git = "https://github.com/RedBoxing/llm.git", branch = "hf-tokenizer", package = "llm" }
sys-info = "0.9.1"
num_cpus = "1.15.0"
tauri-plugin-persisted-scope = { version = "0.1.0" }
reqwest = { version = "0.11.17", features = ["json", "stream"] }
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
url = "2.3.1"
kv = { version = "0.24.0", features = ["json-value"] }
tauri = { version = "1.3.0", features = ["dialog-message", "dialog-open", "fs-all", "http-all", "shell-open", "updater", "window-center", "window-maximize", "window-show"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.71"
rayon = "1.7.0"
walkdir = "2.3.3"
actix-web = "4.3.1"
actix-cors = "0.6.4"
parking_lot = "0.12"
rand = "0.8.5"
once_cell = "1.17.1"
futures = "0.3.28"
flume = "0.10.14"
chrono = "0.4.26"
rand_chacha = "0.3.1"
time = "0.2.23"

diesel = { version = "2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }

digest = "0.10.6"
sha2 = "0.10.6"
blake3 = "1.3.3"


[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = "0.18.2"

[target."cfg(target_os = \"windows\")".dependencies]
webview2-com = "0.19.1"
windows = "0.39.0"

# For testing local tauri builder
[patch.crates-io]
# tauri-build = { path = "/Users/lab/Projects/tauri/core/tauri-build" }
tauri = { path = "/Users/lab/Projects/tauri/core/tauri" }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
# debug = true
